--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
     <meta charset="UTF-8">
     <title>Super Bro Denis</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="menu.js"></script>
-    <script src="index.js"></script>
 </head>
 
 <body>
     <div id="game-menu" class="bg">
         <h1 id="main-title">Super Bro Denis</h1>
         <a class="menu-option" href="#" onclick="showLevels()">Play for free!!</a>
-        <a class="level-option" href="#" onclick="startGame(1)">Level 1</a>
+        <a class="level-option" href="#" onclick="startGame(1)">Skills Level</a>
         <a class="level-option" href="#" onclick="startGame(2)">Level 2</a>
         <a class="level-option" href="#" onclick="startGame(3)">Level 3</a>
         <a id="go-back" class="level-option" href="#" onclick="goBackMainMenu()">Go back</a>
@@ -24,8 +22,21 @@
     <!-- Phaser Library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.70.0/phaser.min.js"></script>
 
-    <!-- Your game script -->
+    <!-- Utilities first -->
+    <script src="utils/ui.js"></script>
+    <script src="utils/collisions.js"></script>
+
+    <!-- Levels next -->
+    <script src="levels/level1.js"></script>
+    <script src="levels/level2.js"></script>
+    <script src="levels/level3.js"></script>
+
+    <!-- Main game code -->
     <script src="game.js"></script>
+
+    <!-- Menu functionality -->
+    <script src="menu.js"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
