--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Super Bro Denis</title>
+    <title>The IDDP saga win Denis Tezerdi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
