menu screen hidden

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="game-menu" class="bg">
+    <div id="game-menu" class="bg hidden">
         <h1 id="main-title">Super Bro Denis</h1>
         <a class="menu-option" href="#" onclick="showLevels()">Play for free!!</a>
         <a class="level-option" href="#" onclick="startGame(1)">Skills Level</a>
