--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
         <div class="level">
             <div class="level-number">Level 3</div>
             <a class="level-option" href="#" onclick="startGame(3)">
+                Level 3:<br>
                 IDDP:<br>
                 It's Definitely Denis' Path
             </a>
