--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="game-menu" class="bg hidden">
 
-        <h1 id="main-title">The IDDP saga:</h1>
+        <h1 id="main-title">The IDDP Saga:</h1>
         <h2 class="author">Win Denis Tezerdi</h2>
 
         <div class="separator"></div>
