--- a/index.html
+++ b/index.html
@@ -5,49 +5,57 @@
     <meta charset="UTF-8">
     <title>The IDDP saga win Denis Tezerdi</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-
-    </style>
 </head>
 
 <body>
     <div id="game-menu" class="bg hidden">
-        <h1 id="main-title">The IDDP Saga:</h1>
-        <h2 class="author">Win Denis Tezerdi</h2>
+        <div class="commerzbank-logo"></div>
 
-        <div class="separator"></div>
-
-        <div class="levels-title">Levels overview</div>
-
-        <!-- Two-column menu layout -->
-        <div class="levels-container">
-            <!-- Left column - level numbers -->
-            <div class="level-numbers-column">
-                <div class="level-number">Level 1</div>
-                <div class="level-number">Level 2</div>
-                <div class="level-number">Level 3</div>
+        <div class="menu-content">
+            <div class="header-section">
+                <h1 id="main-title">The IDDP saga:</h1>
+                <h2 class="author">Win Denis Tezerdi</h2>
+                <div class="separator"></div>
+                <div class="levels-title">Levels overview</div>
             </div>
 
-            <!-- Right column - level content -->
-            <div class="level-content-column">
-                <a class="level-option" href="#" onclick="startGame(1)">
-                    Life of Denis:<br>
-                    What makes me, me
-                </a>
-
-                <a class="level-option" href="#" onclick="startGame(2)">
-                    404: Skill Gap Not Found
-                </a>
-
-                <a class="level-option" href="#" onclick="startGame(3)">
-                    Level 3:<br>
-                    IDDP:<br>
-                    It's Definitely Denis' Path
-                </a>
-            </div>
+            <table class="levels-table">
+                <tr>
+                    <td class="level-number">Level 1</td>
+                    <td>
+                        <a class="level-option" href="#" onclick="startGame(1)">
+                            Life of Denis:<br>
+                            What makes me, me
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="level-number">Level 2</td>
+                    <td>
+                        <a class="level-option" href="#" onclick="startGame(2)">
+                            404: Skill Gap Not Found
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="level-number">Level 3</td>
+                    <td>
+                        <a class="level-option" href="#" onclick="startGame(3)">
+                            IDDP:<br>
+                            It's Definitely Denis' Path
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td>
+                        <a id="go-back" class="level-option" href="#" onclick="goBackMainMenu()">Go back</a>
+                    </td>
+                </tr>
+            </table>
         </div>
 
-        <a id="go-back" class="level-option" href="#" onclick="goBackMainMenu()">Go back</a>
+
     </div>
 
     <div id="game-container"></div>
