--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>The IDDP saga win Denis Tezerdi</title>
+    <title>The IDDP Saga win Denis Tezerdi</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,7 +13,7 @@
 
         <div class="menu-content">
             <div class="header-section">
-                <h1 id="main-title">The IDDP saga:</h1>
+                <h1 id="main-title">The IDDP Saga:</h1>
                 <h2 class="author">Win Denis Tezerdi</h2>
                 <div class="separator"></div>
                 <div class="levels-title">Levels overview</div>
@@ -33,7 +33,7 @@
                     <td class="level-number">Level 2</td>
                     <td>
                         <a class="level-option" href="#" onclick="startGame(2)">
-                            404: Skill Gap Not Found
+                            Skillset: Professional Learner
                         </a>
                     </td>
                 </tr>
