--- a/video1.html
+++ b/video1.html
@@ -6,6 +6,42 @@
     <title>Super Bro Denis</title>
     <link rel="stylesheet" href="styles.css">
     <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background-color: #002e3c;
+            /* Match video2.html background */
+            color: white;
+            font-family: Arial, sans-serif;
+            overflow-x: hidden;
+        }
+
+        /* Bottom border styling */
+        body::after {
+            content: '';
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 10px;
+            background-color: #fed200;
+            /* Yellow border */
+            z-index: 100;
+        }
+
+        /* Logo container */
+        .logo-container {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            z-index: 999;
+        }
+
+        .logo-container img {
+            height: 60px;
+            width: auto;
+        }
+
         #game-container {
             width: 100vw;
             height: 100vh;
@@ -34,26 +70,36 @@
         #video p {
             font-size: 1.5rem;
             margin-bottom: 20px;
+            color: white;
         }
 
         .next-button {
             padding: 12px 30px;
-            background-color: #4CAF50;
-            color: white;
+            background-color: #fed200;
+            /* Match yellow theme */
+            color: #002e3c;
+            /* Dark text on yellow button */
             text-decoration: none;
             border-radius: 4px;
             font-size: 1.2rem;
             cursor: pointer;
             transition: background-color 0.3s;
+            font-weight: bold;
+            border: none;
         }
 
         .next-button:hover {
-            background-color: #45a049;
+            background-color: #ffea80;
         }
     </style>
 </head>
 
 <body>
+    <!-- Added logo at top right -->
+    <div class="logo-container">
+        <img src="assets/logo.png" alt="Super Denis Logo">
+    </div>
+
     <div id="video" class="bg">
         <img src="assets/enemy.png" />
         <p>This is the description of the first video</p>
