updates in game

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <tr>
                     <td class="level-number">Level 1</td>
                     <td>
-                        <a class="level-option" href="#" onclick="startGame(1)">
+                        <a class="level-option" href="#" onclick="selectLevel(1)">
                             Life of Denis:<br>
                             What makes me, me
                         </a>
@@ -32,7 +32,7 @@
                 <tr>
                     <td class="level-number">Level 2</td>
                     <td>
-                        <a class="level-option" href="#" onclick="startGame(2)">
+                        <a class="level-option" href="#" onclick="selectLevel(2)">
                             Skillset: Professional Learner
                         </a>
                     </td>
@@ -40,7 +40,7 @@
                 <tr>
                     <td class="level-number">Level 3</td>
                     <td>
-                        <a class="level-option" href="#" onclick="startGame(3)">
+                        <a class="level-option" href="#" onclick="selectLevel(3)">
                             IDDP:<br>
                             It's Definitely Denis' Path
                         </a>
